Refactor MegaMethodTest to use List.of() for empty lists and remove null checks